最小化機能を追加
タスクバーに入っていない状態で最小化するとレイアウトが悲惨なことになるので防止策も追加

--- a/TextClipper/TextClipper.csproj
+++ b/TextClipper/TextClipper.csproj
@@ -80,6 +80,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Converters\StringShortenerConverter.cs" />
+    <Compile Include="Converters\VisibilityCoverter.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
