--- a/TextClipper/TextClipper.csproj
+++ b/TextClipper/TextClipper.csproj
@@ -50,6 +50,7 @@
       <HintPath>..\..\..\..\..\AppData\Local\Temporary Projects\TextClipper\InfrastructureAssemblies\Microsoft.Expression.Interactions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Interactivity">
@@ -84,6 +85,7 @@
     <Compile Include="Converters\StringShortenerConverter.cs" />
     <Compile Include="Converters\VisibilityCoverter.cs" />
     <Compile Include="Models\Model.cs" />
+    <Compile Include="PluginInfo.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -120,6 +122,7 @@
     <Content Include="InfrastructureAssemblies\Livet.XML" />
     <Content Include="InfrastructureAssemblies\Microsoft.Expression.Interactions.dll" />
     <Content Include="InfrastructureAssemblies\System.Windows.Interactivity.dll" />
+    <Resource Include="Resources\extension.png" />
     <Resource Include="Resources\mainicon.ico" />
     <Resource Include="Resources\minimize.png" />
     <Resource Include="Resources\show.png" />
@@ -128,6 +131,12 @@
     <Resource Include="Resources\output.png" />
     <Resource Include="Resources\remove.png" />
     <Resource Include="Resources\input.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TextClipper.Plugin\TextClipper.Plugin.csproj">
+      <Project>{36d62ea6-912d-40a2-833e-cfe26bb27ddc}</Project>
+      <Name>TextClipper.Plugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
