--- a/TextClipper/TextClipper.csproj
+++ b/TextClipper/TextClipper.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Behaviors\BeginDragBehavior.cs" />
     <Compile Include="Converters\StringShortenerConverter.cs" />
     <Compile Include="Converters\VisibilityCoverter.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="PluginInfo.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
